<resources>
    <string name="app_name">Dialog Example</string>

    <!-- Type fuel -->
    <string name="fragment_pay_refuel_text_ai92">АИ-92</string>
    <string name="fragment_pay_refuel_text_ai95">АИ-95</string>
    <string name="fragment_pay_refuel_text_ai98">АИ-98</string>
    <string name="fragment_pay_refuel_text_ai100">АИ-100</string>
    <string name="fragment_pay_refuel_text_dt">ДТ</string>

    <!-- Buttons -->
    <string name="fragment_pay_refuel_text_button_apply">Оплатить</string>
    
    <!-- Other -->
    <string name="fragment_pay_refuel_text_value_fuel">&#160;л</string>
    <string name="fragment_pay_refuel_text_value_currency">&#160;Р</string>
    <string name="fragment_pay_refuel_text_currency_and_value_pay">&#160;р/литр</string>
    <string name="fragment_pay_refuel_text_dialog_header">Рекомендуемый тип топлива: </string>
</resources>